[package]
name = "voxel-gi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
env_logger = "0.11.3"
log = "0.4.21"
nalgebra = "0.32.4"
obj-rs = "0.7.1"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.15"
